Works with chrome now

--- a/manifest.json
+++ b/manifest.json
@@ -5,40 +5,20 @@
   "version": "1.0",
 
   "description": "Trying to control YT with extension.",
-
-"applications": {
-  "gecko": {
-    //here we can put some fancy id. seems to need an email format
-    "id": "middleware@master.extension"
-    }
-},
+  "permissions": [
+    "activeTab"
+  ],
 
   "icons": {
-    //these are the icons for the extension
-    //is shown in the about:debugging at least
     "48": "icons/border-48.png"
   },
 
-  "content_scripts": [
-    {
-      //"matches": ["*://*.mozilla.org/*"],
-      //testing
-      "matches": ["*://*.youtube.com/*"],
-      //this should make the script run only on youtube pages
-      "js": ["middlewaremasters.js"]
-      //"js": ["middlewaremasters.js", "button.js"] 
-      //while running here, the button doesnt work
-    }
-  ],
-
-    //while running on background, seems that logs dont work?
   "background": {
-    "scripts": ["button.js"]
+    "scripts": ["background.js"]
   },
  
   "browser_action": {
     "default_icon": {
-      //this adds the icon to browser
       "16": "icons/page-16.png"
      }
    }
