--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
   },
 
   "background": {
-    "scripts": ["background.js"]
+    "scripts": ["background.js", "scripts/ytsdiscovery.js"]
   },
  
   "browser_action": {
