--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
   "content_scripts": [
     {
       "matches": ["https://*.youtube.com/*"],
-      "js": ["scripts/listener.js"]
+      "js": ["scripts/listener.js", "scripts/status.js"]
     }
   ],
  
