--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,8 @@
 
   "content_scripts": [
     {
-      "matches": ["https://*.youtube.com/*"],
+      "matches": ["https://*.youtube.com/*",
+        "https://*.vimeo.com/*"],
       "js": ["scripts/listener.js", "scripts/status.js"]
     }
   ],
