--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,8 @@
   "browser_action": {
     "default_icon": {
       "16": "icons/page-16.png"
-     }
+     },
+     "default_popup": "popup/popup.html"
    }
 
 
