--- a/manifest.json
+++ b/manifest.json
@@ -16,13 +16,12 @@
   },
 
   "background": {
-    "scripts": ["background.js"]
+    "scripts": ["scripts/background.js"]
   },
 
   "content_scripts": [
     {
-      "matches": ["https://*.youtube.com/*",
-        "https://*.vimeo.com/*"],
+      "matches": ["https://*.youtube.com/*", "https://*.vimeo.com/*"],
       "js": ["scripts/listener.js", "scripts/status.js"]
     }
   ],
