--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
   ],
 
   "icons": {
-    "48": "icons/border-48.png"
+    "48": "icons/red_48.png"
   },
 
   "background": {
@@ -28,7 +28,7 @@
  
   "browser_action": {
     "default_icon": {
-      "16": "icons/page-16.png"
+      "16": "icons/red_16.png"
      },
      "default_popup": "popup/popup.html"
    }
