--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,8 @@
   },
 
   "background": {
-    "scripts": ["scripts/background.js", "scripts/bgCommands.js"]
+    "scripts": ["scripts/background.js"]
+    //"scripts": ["scripts/background.js", "scripts/bgCommands.js"]
   },
 
   "content_scripts": [
